<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="etEnterAmount">Enter Amount</string>
    <string name="tvTipIs">Tip is:</string>
    <string name="bt10">10%</string>
    <string name="bt15">15%</string>
    <string name="bt20">20%</string>
    <string name="tvDollarSign">$</string>

</resources>
