<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@string/tvDollarSign"
        android:ems="10"
        android:hint="@string/etEnterAmount"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipIs"
        android:layout_alignBottom="@+id/tvTipIs"
        android:layout_alignRight="@+id/bt20"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/tvTipIs"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bt20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt15"
        android:layout_alignBottom="@+id/bt15"
        android:layout_alignRight="@+id/etAmount"
        android:onClick="on20"
        android:text="@string/bt20" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etAmount"
        android:layout_toLeftOf="@+id/etAmount"
        android:text="@string/tvDollarSign"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bt15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt10"
        android:layout_alignBottom="@+id/bt10"
        android:layout_centerHorizontal="true"
        android:onClick="on15"
        android:text="@string/bt15" />

    <Button
        android:id="@+id/bt10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_marginTop="62dp"
        android:layout_toRightOf="@+id/textView1"
        android:onClick="on10"
        android:text="@string/bt10" />

    <TextView
        android:id="@+id/tvTipIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bt10"
        android:layout_below="@+id/bt10"
        android:layout_marginTop="64dp"
        android:text="@string/tvTipIs"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
